# quadrex

./: .env  .gitignore  LICENSE  README.md  config.py  package.json  pyproject.toml  requirements.txt  run.py
app/: .env.example  __init__.py  cli.py  default_categories.py  filters.py  models.py
app/auth/: forms.py  routes.py
app/budgets/: __init__.py  routes.py
app/categories/: __init__.py  routes.py
app/forms/: budget.py
app/main/: routes.py
app/routes/: budget.py
app/static/css/: app.css  main.css
app/static/js/: passkey-auth.js  passkey-management.js  passkey-register.js  webauthn-utils.js
app/templates/: base.html  index.html  landing.html
app/templates/auth/: change_password.html  login.html  profile.html  register.html
app/templates/budgets/: _form.html  _grid.html  dashboard.html  list.html
app/templates/categories/: _form.html  _grid.html  add.html  list.html
app/templates/transactions/: _form.html  _grid.html  _table.html  add.html  form.html  list.html
app/transactions/: __init__.py  routes.py
docs/: api.rst  conf.py  index.rst  modules.rst
docs/source/: conf.py  index.rst
instance/: app.db
migrations/versions/: 8ff2fd88b6a2_add_passkey_support_with_explicit_.py  b158ef05f1a2_add_user_specific_monthly_budgets.py  d0e870e14718_initial_migration_.py  d0e870e14718_initial_migration_with_user_specific_.py
