[project]
name = "budget-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-sqlalchemy==3.0.2",
    "flask==2.2.5",
    "flask-migrate==4.0.4",
    "flask-login==0.6.2",
    "flask-wtf==1.1.1",
    "email-validator==2.0.0.post2",
    "python-dotenv==1.0.0",
    "werkzeug==2.2.3",
]
